@@ -100,6 +100,13 @@
             "field" : "player"
         },
         {
+            "tag" : "<totalProtection>",
+            "class" : "com.seanjohnson.textfighter.Player",
+            "method" : "getTotalProtection",
+            "fieldclass" : "com.seanjohnson.textfighter.TextFighter",
+            "field" : "player"
+        },
+        {
             "tag" : "<health>",
             "class" : "com.seanjohnson.textfighter.Player",
             "method" : "getHp",
